[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
libp2p = "0.54.1"
log = "0.4.22"
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.209"
serde_derive = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = "1.40.0"
uuid = "1.10.0"
